tests/ui/associated-types/hr-associated-type-bound-param-2.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `Z`
  --> $DIR/hr-associated-type-bound-param-2.rs:6:35
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this trait
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ^^^^^ required by this bound in `Z`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:15:14
   |
LL |     type W = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `Z`
  --> $DIR/hr-associated-type-bound-param-2.rs:6:35
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this trait
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ^^^^^ required by this bound in `Z`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the trait `Clone` is implemented for `String`
note: required by a bound in `Z`
  --> $DIR/hr-associated-type-bound-param-2.rs:6:35
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this trait
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ^^^^^ required by this bound in `Z`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
